Migracja z MongoDB do MySQL, dodane zostaly grupy oraz przeprojektowana zostala struktura bazy danych oraz testowa zakladka od zarzadzania grupami i zakladkami

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,10 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "baseUrl": "./src",
+  "paths":{
+    "components/*": ["components/*"],
+    "utils/*": ["utils/*"]
+  }
 }
