--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
+    "copy-to-clipboard": "^3.3.3",
     "formik": "^2.4.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
@@ -23,6 +24,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
+    "react-table": "^7.8.0",
+    "react-tooltip": "^5.21.5",
     "redux": "^4.2.1",
     "styled-components": "^6.0.7",
     "yup": "^1.2.0"
@@ -32,10 +35,12 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-table": "^7.7.16",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
