--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.26",
     "animate.css": "^4.1.1",
@@ -17,6 +18,7 @@
     "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.3",
     "formik": "^2.4.3",
+    "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
@@ -43,8 +45,9 @@
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
-  "proxy": "http://localhost:2137"
+  "proxy": "http://192.168.100.100:2137"
 }
